third_party/move/move-compiler-v2/tests/cyclic-instantiation-checker/v1-tests/two_loops.exp

Diagnostics:
error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
  ┌─ tests/cyclic-instantiation-checker/v1-tests/two_loops.move:7:9
  │
7 │     fun f<T>() {
  │         ^
  │
  = `f<T>` calls `f<M::S<T>>` at tests/cyclic-instantiation-checker/v1-tests/two_loops.move:8

error: cyclic type instantiation: a cycle of recursive calls causes a type to grow without bound
   ┌─ tests/cyclic-instantiation-checker/v1-tests/two_loops.move:11:9
   │
11 │     fun g<T>() {
   │         ^
   │
   = `g<T>` calls `g<M::S<T>>` at tests/cyclic-instantiation-checker/v1-tests/two_loops.move:12
